Enabled strict check types in templates.

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,12 @@
     <meta name="referrer" content="origin">
     <meta name="theme-color" content="#731010">
     <link title="MyLFC.ru - Последние материалы о Ливерпуле" type="application/rss+xml" rel="alternate" href="https://mylfc.ru/api/v1/rss" />
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
     <app>
-        <span>Идет загрузка, а <a href="https://m.mylfc.ru/"> здесь </a> есть версия сайта для чтения</span>
+        <span>Идет загрузка, а <a href="https://m.mylfc.ru/"> здесь </a> есть версия сайта для чтения. </span>
+        <span>Если загрузка не происходи(мало ли) попробуйте обновить страницу с помощью сочетания клавиш Ctrl+F5</span>
     </app>
 <noscript>
     <p>
