--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,8 @@
         Извините, сайту нужен JavaScript. <a href="https://m.mylfc.ru/">Воспользуйтесь облегченной версией</a>, пожалуйста.
     </p>
 </noscript>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-79219562-3"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-79219562-3"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-79219562-3');</script>
 
-    gtag('config', 'UA-79219562-3');
-</script>
 <script type="text/javascript">
     var crawlerAgent = (/bot|aolbuild|baidu|bing|msn|duckduckgo|teoma|slurp|lighthouse/i).test(navigator.userAgent);
     var yaLoaded = false;
