--- a/src/index.html
+++ b/src/index.html
@@ -40,24 +40,24 @@
     var crawlerAgent = (/bot|aolbuild|baidu|bing|msn|duckduckgo|teoma|slurp|lighthouse/i).test(navigator.userAgent);
     var yaLoaded = false;
     function loadYa() {
-        if (!crawlerAgent && !yaLoaded) {
-            (function (w, d, n, s, t) {
-                yaLoaded = true;
-                w[n] = w[n] || [];
-                w[n].push(function () {
-                    addAd("R-A-255349-2");
-                    addAd("R-A-255349-3");
-                    addAd("R-A-255349-4");
-                    addAd("R-A-255349-5");
-                });
-                t = d.getElementsByTagName("script")[0];
-                s = d.createElement("script");
-                s.type = "text/javascript";
-                s.src = "https://an.yandex.ru/system/context.js";
-                s.async = true;
-                t.parentNode.insertBefore(s, t);
-            })(this, this.document, "yandexContextAsyncCallbacks");
-        }
+        // if (!crawlerAgent && !yaLoaded) {
+        //     (function (w, d, n, s, t) {
+        //         yaLoaded = true;
+        //         w[n] = w[n] || [];
+        //         w[n].push(function () {
+        //             addAd("R-A-255349-2");
+        //             addAd("R-A-255349-3");
+        //             addAd("R-A-255349-4");
+        //             addAd("R-A-255349-5");
+        //         });
+        //         t = d.getElementsByTagName("script")[0];
+        //         s = d.createElement("script");
+        //         s.type = "text/javascript";
+        //         s.src = "https://an.yandex.ru/system/context.js";
+        //         s.async = true;
+        //         t.parentNode.insertBefore(s, t);
+        //     })(this, this.document, "yandexContextAsyncCallbacks");
+        // }
     }
 
     function addAd(name) {
