Added signalr state and automatic recconect

--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,12 @@
 </head>
 <body>
     <app>
-        <span>Идет загрузка, а <a href="https://m.mylfc.ru/"> здесь </a> есть версия сайта для чтения. </span>
+        <span>Идет загрузка. </span>
         <span>Если загрузка не происходи(мало ли) попробуйте обновить страницу с помощью сочетания клавиш Ctrl+F5</span>
     </app>
 <noscript>
     <p>
-        Извините, сайту нужен JavaScript. <a href="https://m.mylfc.ru/">Воспользуйтесь облегченной версией</a>, пожалуйста.
+        Извините, для работы сайта нужен включенный JavaScript.
     </p>
 </noscript>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79219562-3"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-79219562-3');</script>
