--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,21 @@
     </p>
 </noscript>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79219562-3"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-79219562-3');</script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+    ym(87211002, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true
+    });
+ </script>
+ <noscript><div><img src="https://mc.yandex.ru/watch/87211002" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+ <!-- /Yandex.Metrika counter -->
+
 
 <script type="text/javascript">
     var crawlerAgent = (/bot|aolbuild|baidu|bing|msn|duckduckgo|teoma|slurp|lighthouse/i).test(navigator.userAgent);
