Added google adsense script

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <meta name="theme-color" content="#731010">
     <link title="MyLFC.ru - Последние материалы о Ливерпуле" type="application/rss+xml" rel="alternate" href="https://mylfc.ru/api/v1/rss" />
     <link rel="manifest" href="manifest.webmanifest">
+    <script data-ad-client="ca-pub-6971545569693548" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <app>
