--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 <body>
     <app>
         <span>Идет загрузка. </span>
-        <span>Если загрузка не происходи(мало ли) попробуйте обновить страницу с помощью сочетания клавиш Ctrl+F5</span>
+        <span>Если загрузка не происходит(мало ли) попробуйте обновить страницу с помощью сочетания клавиш Ctrl+F5</span>
     </app>
 <noscript>
     <p>
